fix on ios

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 body {
     margin: 0;
+    display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
